# quick-cook-or-nixify-haskell-project

./: README.md  README.org  cook.sh  nixify.sh
build-framework/: cabal.project  default.nix  do.sh  shell.nix  undo.sh
build-framework/nix/: sources.json
build-framework/template/: cross-build.nix  default.nix  docker.nix  shell.nix  start-dev  tarball.nix
common/: common.sh
deployment-framework/template/: arion-compose.nix  arion-pkgs.nix
fix-up/: do.sh  undo.sh
prepare-env/: do.sh  undo.sh
project-scaffold/: do.sh
project-scaffold-existing/: do.sh
project-scaffold-existing/template01/: .travis.yml  appveyor.yml  cabal.project  default.nix  project.yml  shell.nix
project-scaffold-existing/template01/app/: AppEnv.hs  AppError.hs  CmdLine.hs
project-scaffold-existing/template01/src/: .dir-locals.el
project-scaffold-generate/: do.sh  undo.sh
project-scaffold-template/: do.sh  project.yml.orig  undo.sh
project-scaffold-template/application/: .template.dep
project-scaffold-template/application/backend-service/: LICENSE  README.md  package.yaml.for.reference.only  project.orig.name.cabal
project-scaffold-template/application/devops-tool/: CHANGELOG.md  README.md  (+2 more)
project-scaffold-template/full-system-nixos2111-ghc8107/: README.org  cabal.project  project.yml
project-scaffold-template/full-system-nixos2111-ghc8107/runner/: .project.orig.name  .project.pascal.name  .project.snake.name  CHANGELOG.md  README.md  appveyor.yml  arion-compose.nix  arion-pkgs.nix  cabal.project  cross-build.nix  default.nix  deploy  docker.nix  hie.yaml  java-analyzer-runner.cabal  release.nix  remove-haddock-odd-jobs.patch  shell.nix  tarball.nix
project-scaffold-template/full-system-nixos2111-ghc8107/runner/.github/workflows/: nix-ci.yml
project-scaffold-template/full-system-nixos2111-ghc8107/runner/app/: AppEnv.hs  AppM.hs  Main.hs  Utils.hs
project-scaffold-template/full-system-nixos2111-ghc8107/runner/app/AppCapability/: DumpFetchor.hs  JavaAnalyzerRunner.hs  ReportPostProcessor.hs  ReportPreProcessor.hs  ReportUploader.hs
project-scaffold-template/full-system-nixos2111-ghc8107/runner/app/FromConfig/: CommandPath.hs  CurlCmdLine.hs  GCMVCmdLine.hs  JCACmdLine.hs  JavaAnalyzerRunner.hs  MATCmdLine.hs  OddJobsConfig.hs  OddJobsStartArgs.hs  OddJobsStopArgs.hs  OutputPath.hs  PostgresqlSimple.hs
project-scaffold-template/full-system-nixos2111-ghc8107/runner/cd/fix-up/: do.sh  undo.sh
project-scaffold-template/full-system-nixos2111-ghc8107/runner/config/: development.properties  production.properties
project-scaffold-template/full-system-nixos2111-ghc8107/runner/nix/: sources.json
project-scaffold-template/full-system-nixos2111-ghc8107/runner/nix/overlay/: eclipse-mat.nix  my-jca.nix  xvfb-run.nix
project-scaffold-template/full-system-nixos2111-ghc8107/runner/src/Capability/: DumpFetchor.hs  JavaAnalyzerRunner.hs  ReportPostProcessor.hs  ReportPreProcessor.hs  ReportUploader.hs
project-scaffold-template/full-system-nixos2111-ghc8107/runner/src/Core/: JavaAnalyzerRunner.hs  MyError.hs  Types.hs
project-scaffold-template/full-system-nixos2111-ghc8107/runner/test/: Spec.hs
project-scaffold-template/infrastructure/: .template.dep
project-scaffold-template/nixos2105-ghc8104-stackage185-bazel-fully-static/: .hie-bios  WORKSPACE  fixup  project.yml  tarball.nix
project-scaffold-template/nixos2105-ghc8107-haskell.nix/: .dir-locals.el  .project.snake.name  CHANGELOG.md  default.nix  hie.yaml  project.orig.name.cabal  project.yml.orig  shell.nix  tarball.nix
project-scaffold-template/nixos2105-ghc8107-haskell.nix/app/: .dir-locals.el  AppEnv.hs
project-scaffold-template/nixos2105-ghc8107-haskell.nix/src/: .dir-locals.el  Has.hs
project-scaffold-template/nixos2105-ghc8107-haskell.nix/test/: .dir-locals.el
project-scaffold-template/nixos2105-ghc884-indexstate20210718/: README.md  cross-build.nix  project.yml  start-dev
project-scaffold-template/nixos2105-ghc884-indexstate20210718-haskell.nix/: .ghci  .project.pascal.name  cross-build.nix  default.nix  docker.nix  project.orig.name.cabal  project.yml  shell.nix  tarball.nix  template.cabal
project-scaffold-template/nixos2105-ghc884-indexstate20210718-haskell.nix/app/: Main.hs
project-scaffold-template/nixos2105-ghc884-indexstate20210718-haskell.nix/nix/: sources.json
project-scaffold-template/nixos2105-ghc884-indexstate20210718-haskell.nix/src/: As.hs
project-scaffold-template/nixos2105-ghc884-indexstate20210718-haskell.nix/src/Core/: Template.hs
project-scaffold-template/nixos2105-ghc884-indexstate20210718-haskell.nix/test/: Spec.hs
project-scaffold-template/nixos2111-ghc8107-haskell.nix/: README.md  arion  arion-compose.nix  arion-pkgs.nix  build  cross-build.nix  default.nix  deploy  deploy-to-local-docker-compose  deploy-to-production-vm  deploy-to-test-vm  develop  hie.yaml  project.yml.orig  release.nix
project-scaffold-template/nixos2205-ghc8107-haskell.nix/: .travis.yml  develop  hie.yaml  project.orig.name.cabal
project-scaffold-template/nixos2205-ghc8107-haskell.nix-servant-service/: .env  .ghcid  cross-build.nix  default.nix  docker.nix  package.yaml.for.reference.only  project.orig.name.cabal  project.yml.orig  release.nix  shell.nix  tarball.nix
project-scaffold-template/nixos2205-ghc8107-haskell.nix/.github/workflows/: cachix-ci.yml.template  haskell-ci.yml.template
project-scaffold-template/nixos2205-ghc8107-haskell.nix/app/: AppM.hs  Main.hs
project-scaffold-template/nixos2205-ghc8107-haskell.nix/app/FromConfig/: PostgresqlSimple.hs
project-scaffold-template/nixos2205-ghc8107-haskell.nix/config/local/localhost/: default.nix
project-scaffold-template/nixos2205-ghc8107-haskell.nix/config/site/local/phase/test/: api-gw.nix
project-scaffold-template/nixos2205-ghc8107-haskell.nix/env/site/local/phase/test/: db.nix  runner.nix
project-scaffold-template/nixos2205-ghc8107-haskell.nix/src/Capability/: project.pascal.name.hs
project-scaffold-template/nixos2205-ghc8107-haskell.nix/src/Core/: Types.hs
project-scaffold/template01/: .gitignore  LICENSE  default.nix
(+248 files in other folders)
