cabal-version:       2.4
name:                java-analyzer-runner
version:             0.0.0.0
synopsis:            run jobs to analyze java dumps.
description:         run jobs to analyze java dumps.
homepage:            https://github.com/hughjfchen/java-analyzer-runner
bug-reports:         https://github.com/hughjfchen/java-analyzer-runner/issues
license:             MIT
license-file:        LICENSE
author:              Hugh JF Chen
maintainer:          Hugh JF Chen <hugh.jf.chen@gmail.com>
copyright:           2021 Hugh JF Chen
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/hughjfchen/java-analyzer-runner.git

common common-options
  build-depends:       base >= 4.11.1.0 && < 4.15
                     , relude
                     , text
                     , bytestring
                     , mtl
                     , transformers
                     , containers
                     , unordered-containers
                     , exceptions
                     , typed-process
                     , aeson
                     , odd-jobs
                     , parsec
                     , filepath
                     , path
                     , path-io
                     , modern-uri
                     , password-types
                     , password

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveAnyClass
                       DeriveFunctor
                       DeriveGeneric
                       DerivingStrategies
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Core.Types
                     , Core.MyError
                     , Core.JavaAnalyzerRunner
                     , Has
                     , As
                     , Error
                     , MonadStack
                     , Capability.JavaAnalyzerRunner
                     , Capability.DumpFetchor
                     , Capability.ReportPreProcessor
                     , Capability.ReportPostProcessor
                     , Capability.ReportUploader

executable java-analyzer-runner
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_java_analyzer_runner
                     , AppM
                     , AppEnv
                     , AppError
                     , Utils
                     , AppCapability.JavaAnalyzerRunner
                     , AppCapability.DumpFetchor
                     , AppCapability.ReportPreProcessor
                     , AppCapability.ReportPostProcessor
                     , AppCapability.ReportUploader
                     , FromConfig.PostgresqlSimple
                     , FromConfig.ResourcePool
                     , FromConfig.OddJobsStartArgs
                     , FromConfig.OddJobsStopArgs
                     , FromConfig.OddJobsConfig
                     , FromConfig.CommandPath
                     , FromConfig.OutputPath
                     , FromConfig.JCACmdLine
                     , FromConfig.MATCmdLine
                     , FromConfig.GCMVCmdLine
                     , FromConfig.CurlCmdLine
  build-depends:       java-analyzer-runner
                     , optparse-applicative ^>= 0.16.1.0
                     , fast-logger
                     , conferer
                     , postgresql-simple
                     , resource-pool
                     , time
                     , unliftio
                     , directory
                     , foreign-store
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite java-analyzer-runner-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       java-analyzer-runner
                     , hspec
                     , hedgehog
                     , hspec-hedgehog
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark java-analyzer-runner-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , java-analyzer-runner
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
